--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 
 # Dependencies
 node_modules
+apps/web/node_modules
+packages/backend-api/node_modules
+packages/eslint-config/node_modules
+packages/prisma-db/node_modules
 .pnp
 .pnp.js
 
