--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.3.3",
+    "@repo/prisma-db": "*",
     "@repo/states": "*",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
