--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@repo/typescript-config/base.json"
+  "extends": "@repo/typescript-config/base.json",
+  "references": [
+    { "path": "./packages/prisma-db" },
+    { "path": "./packages/backend-api" },
+  ],
 }
