--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.3.3",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.12.1",
     "@repo/prisma-db": "*",
     "@repo/states": "*",
     "next": "^14.0.4",
