--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "postinstall": "yarn prisma generate"
+    
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@prisma/client": "^5.12.1",
     "@repo/prisma-db": "*",
     "@repo/states": "*",
     "next": "^14.0.4",
