--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,14 +8,13 @@
     "start": "next start",
     "lint": "eslint . --max-warnings 0",
     "postinstall": "yarn prisma generate"
-    
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@repo/prisma-db": "*",
     "@repo/states": "*",
     "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
