--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --max-warnings 0",
-    "postinstall": "yarn prisma generate"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@repo/prisma-db": "*",
     "@repo/states": "*",
